--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2 class="flex justify-center">Sign up</h2>
 <br/>
-<div class="pt-20 flex justify-center">
+<div class="pt-20 flex justify-center h-screen bg-blue-500">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
